--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <title>GitHub Page One</title>
-    <script src="https://cdn.jsdelivr.net/npm/@amebyte/mini-vue3-plus@latest/dist/index.min.js"></script>
-</head>
-<body>
-    <div id="app">
-        {{ message }}
-        <button @click="changeMessage">点击我</button>
-    </div>
 
-    <script>
-        const app = Vue.createApp({
-            data() {
-                return { message: '你好，Mini Vue3 Plus!' };
-            },
-            methods: {
-                changeMessage() {
-                    this.message = '消息已改变！';
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <meta charset="utf-8" />
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
+    </head>
+
+    <body>
+        <div x-data="Data()">
+            <h1 x-text="Title"></h1>
+            <h4 x-text="Content"></h4>
+            <h5 x-html="XSS"></h5>
+            <button @click="Refresh()">點我刷新</button>
+            <span @left="Left()">按左方Alert</span>
+            <div :style="Blue">我是藍色</div>
+            <div x-show="Show">預設顯示</div>
+        </div>
+        <script>
+            function Data() {
+                return { 
+                    Title: 'Alpine測試',
+                    Content: '内文',
+                    XSS: '<strong>含有HTML的内文</strong>',
+                    Refresh: () => {window.location.reload(true);},
+                    Left: () => {alert('按下左鍵')},
+                    Blue: 'color:blue',
+                    Show: true,
+                    
+                    //Learn: https://www.cc.ntu.edu.tw/chinese/epaper/home/News_Content_n_103858_s_232976.html
                 }
             }
-        });
-        app.mount('#app');
-    </script>
-</body>
+        </script>
+    </body>
 </html>
